# korea-data-suite

./: .gitignore  README.ko.md  README.md  pyproject.toml  server.json
.github/workflows/: publish-mcp.yml
app/: main.py
app/apis/holidays/: kasi.py  models.py  router.py  seed.json  service.py  store.py
app/apis/realestate/: models.py  molit.py  regions.py  router.py  store.py  sync.py
app/core/: auth.py  config.py  db.py  logsafe.py  scheduler.py
deploy/: cloudflared.example.yml  com.choiyounggi.kds-api.plist  com.choiyounggi.kds-site.plist  com.choiyounggi.kds-sync.plist  com.choiyounggi.kds-tunnel.plist  site.env.example
mcp_server/: server.py
scripts/: backfill.py  gen_regions.py  gen_site.py  install-daemon.sh  publish_site.sh  run.sh  sync.py  sync.sh
tests/: conftest.py  test_api.py  test_backfill.py  test_business_days.py  test_concurrency.py  test_gen_site.py  test_kasi.py  test_logsafe.py  test_mcp_server.py  test_molit.py  test_re_api.py  test_re_store.py  test_re_sync.py  test_security.py  test_site_serving.py  test_store.py
