[project]
name = "korea-data-suite"
version = "0.1.0"
description = "Korean public data APIs: holidays, business days, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.4",
    "mcp>=1.2",
]

[project.scripts]
korea-data-mcp = "mcp_server.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Only the MCP server is a distributable package (installable via uvx/pip so agents
# can add it). The API app / scripts run from source and are excluded from the wheel.
[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
