[project]
name = "korea-data-suite"
version = "0.1.0"
description = "Korean public data APIs: holidays, business days, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.4",
]

# The distributable MCP server lives in packages/korea-data-mcp (its own package,
# minimal deps). It is intentionally NOT a workspace member — build/publish it from
# that directory. This root project is the API app and runs from source.
[tool.uv.workspace]
members = []
exclude = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
